--- a/css/style.css
+++ b/css/style.css
@@ -15,16 +15,84 @@ body{
     background-color: #0066ff;
     padding-top:2%;
     position: relative;
+		text-align: center;
 }
 
 .navigation_bar{
 	width:90%;
 	height:40px;
-	background-color:white;
+	background-color:black;
+	opacity: 0.8;
+}
+
+.menuitems{
+	display: inline;
+	line-height: 30px;
+	float: left;
+	top: 5px;
+
+
+}
+/*#menuitems{
+	text-align: center;
+}
+#menuitems li{
+	list-style: none;
+	display: inline;
+
+
+}
+#menuitems a{
+	color:black;
+	font-size: 16px;
+    margin: 10px;
+	text-decoration: none;
+}
+#menuitems a:hover{
+	font-size: 18px;
+
+}
+*/
+
+ul{
+	list-style: none;
+
+}
+ul li{
+	float: left;
+  text-align: center;
+	width: 200px;
+	margin: 10px;
+	top:-5px;
+	text-align: center;
+	position: relative;
+}
+ul li a{
+	text-decoration: none;
+	color: white;
+}
+ul li ul{
+	overflow: hidden;
+	position: absolute;
+	top:25px;
+
+	background: black;
+}
+ul li a:hover{
+	color: green;
+}
+
+ul li ul li {
+
+	display: none;
+	overflow:visible;
+	margin: 10px;
+}
+ul li:hover ul li {
+	display: block;
 }
 .content_area{
 	width: 90%;
-
 
 }
 .leftside{
@@ -34,15 +102,16 @@ body{
     float: left;
     display: inline;
 height:600px;
-
+display: none;
 }
 .rightside{
 	background-color: blue;
-	width:70%;
+	width:100%;
 	overflow: auto;
 	float: right;
 	display: inline;
 	height:600px;
+
 }
 .label{
 	float:left;
@@ -72,23 +141,3 @@ height:600px;
 	clear: both;
 	height: 60px;
 }
-.menuitems{
-	display: inline;
-	line-height: 30px;
-	float: left;
-	top: 5px;
-
-}
-#menuitems li{
-	list-style: none;
-	display: inline;
-
-
-}
-#menuitems a{
-	color:black;
-	font-size: 20px;
-    margin: 10px;
-	text-decoration: none;
-}
-
