--- a/css/style.css
+++ b/css/style.css
@@ -1,24 +1,123 @@
-*{
-	box-sizing:border-box;
-}
-.root{
+
+#root{
     width:90%;
-    margin:auto;
+    position: relative;
+    left:5%;
 }
 body{
     background-color:silver
 
 }
-.header{
-    width:90%;
-    height:60px;
-    background-color: #0066ff;
-    padding-top:2%;
-    position: relative;
-		text-align: center;
+#header{
+   background-color:#445DFF;
+    height: 50px;
+    display: flex;
+}
+#label{
+	
+	flex-grow: 3;
+    text-align: center;
+    font-size: 20px;
+    padding-top:10px;
+    font-family: sans-serif;
+
+}
+#search{
+	flex-grow: 7;
+    margin: 10px 50px 10px 50px;
+}
+#cart{
+	flex-grow: 2;
+    margin: 10px 30px 10px 30px;
+    font-family: sans-serif;
+    border-radius: 5px;
+    font-size: 20px;
+}
+#checkout{
+	flex-grow: 1;
+    margin: 10px 30px 10px 30px;
+    font-family: sans-serif;
+    border-radius: 5px;
+    font-size: 20px;
+}
+#navigation_bar{
+    background: black;
+    height: 40px;
+
+    
+}
+#menu{
+    color: white;
+    list-style: none;
+    display: flex;
+    text-align: center;
+    height: inherit;
 }
 
-.navigation_bar{
+a{
+    color: white;
+    text-decoration: none;
+    
+}
+ul{
+    background-color:green;
+    opacity: 0.8;
+}
+#menu li{
+flex-grow: 1;
+    margin-top:10px;
+}
+#menu li ul {
+    top:-10px;
+    position: relative;
+}
+#menu li ul li{
+    margin-top: 20px;
+    margin-bottom: 20px;
+    padding-top:10px;
+    display: none;
+}
+#menu li:hover ul li{
+	display: block;
+}
+ li ul li a{
+	text-align: center;
+	//position: relative;
+	font-family:sans-serif;
+	left:-20px;
+}
+
+#product_box{
+    height: 800px;
+    background-color:blueviolet;
+
+     flex-wrap: wrap;
+    overflow: auto;
+   // overflow: scroll;*/
+}
+.single_product{
+    height: 250px;
+    min-width:200px;
+    margin: 50px;
+     display: inline-block;
+
+    background-color: yellow;
+    
+}
+img{
+    width: 100%;
+    height: 200px;
+    max-width: 200px;
+}
+.product_button{
+    width:100%;
+    height: 50px;
+}
+#footer{
+    height: 30px;
+    background-color:black;
+}
+/*.navigation_bar{
 	width:90%;
 	height:40px;
 	background-color:black;
@@ -52,11 +151,14 @@ body{
 	font-size: 18px;
 
 }
-*/
 
-ul{
+
+/*ul{
 	list-style: none;
-
+   line-height: 30px;
+	 overflow: hidden;
+	 position: relative;
+	 top:-10px;
 }
 ul li{
 	float: left;
@@ -65,32 +167,41 @@ ul li{
 	margin: 10px;
 	top:-5px;
 	text-align: center;
-	position: relative;
+	//position: relative;
 }
 ul li a{
 	text-decoration: none;
 	color: white;
+	display: block;
 }
 ul li ul{
-	overflow: hidden;
-	position: absolute;
-	top:25px;
+
+ //	position: absolute;
 
 	background: black;
+	margin: 9px;
+
 }
+ul li ul li{
+	display: none;
+
+}
+ul li ul li a{
+	text-align: center;
+	//position: relative;
+	font-family:sans-serif;
+	left:-20px;
+}
+ul li:hover ul li{
+	display: block;
+}
+
 ul li a:hover{
 	color: green;
 }
 
-ul li ul li {
 
-	display: none;
-	overflow:visible;
-	margin: 10px;
-}
-ul li:hover ul li {
-	display: block;
-}
+
 .content_area{
 	width: 90%;
 
@@ -113,27 +224,6 @@ display: none;
 	height:600px;
 
 }
-.label{
-	float:left;
-	width:20%;
-	position: relative;
-   margin:auto;
-   top:-10px;
-
-}
-.search{
-	float:left;
-	width:60%;
-	top:-10px;
-	position: relative;
-}
-.cart{
-	float:left;
-	width:20%;
-	padding-left: 7%;
-	top:-10px;
-	position: relative;
-}
 
 .footer{
 	background-color: black;
@@ -141,3 +231,4 @@ display: none;
 	clear: both;
 	height: 60px;
 }
+*/
