--- a/css/style.css
+++ b/css/style.css
@@ -15,16 +15,27 @@ body{
 }
 #label{
 	
-	flex-grow: 3;
+	flex-grow: 2;
     text-align: center;
     font-size: 20px;
     padding-top:10px;
     font-family: sans-serif;
+    color:white;
+    font-style: italic;
 
 }
 #search{
 	flex-grow: 7;
     margin: 10px 50px 10px 50px;
+    margin-right: 0px;
+
+}
+#search_button{
+    margin-top:10px;
+    font-size:20px;
+    margin-right: 100px;
+    margin-left:10px;
+    color:white;
 }
 #cart{
 	flex-grow: 2;
@@ -32,6 +43,9 @@ body{
     font-family: sans-serif;
     border-radius: 5px;
     font-size: 20px;
+}
+#countInCart{
+    display: Inline;
 }
 #checkout{
 	flex-grow: 1;
@@ -47,7 +61,7 @@ body{
     
 }
 #menu{
-    color: white;
+    color: black;
     list-style: none;
     display: flex;
     text-align: center;
@@ -55,13 +69,12 @@ body{
 }
 
 a{
-    color: white;
+    color: black;
     text-decoration: none;
     
 }
 ul{
-    background-color:green;
-    opacity: 0.8;
+    background-color:aliceblue;
 }
 #menu li{
 flex-grow: 1;
@@ -89,7 +102,7 @@ flex-grow: 1;
 
 #product_box{
     height: 800px;
-    background-color:blueviolet;
+    background-image:url("../assets/background/cover.jpg");
 
      flex-wrap: wrap;
     overflow: auto;
@@ -113,9 +126,25 @@ img{
     width:100%;
     height: 50px;
 }
+.item_details{
+height: 30px;
+    background: white;
+}
 #footer{
     height: 30px;
     background-color:black;
+}
+#footer ul{
+    background: black;
+    color:white;
+    list-style: none;
+   
+}
+#footer ul li{
+    display: inline;
+    margin: 10px;
+    position: relative;
+    top:10px;
 }
 /*.navigation_bar{
 	width:90%;
